# Mini-Agent

./: README.md  README_CN.md  pyproject.toml
docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  PRODUCTION_GUIDE.md  PRODUCTION_GUIDE_CN.md
mini_agent/: agent.py  cli.py
mini_agent/llm/: anthropic_client.py  base.py  llm_wrapper.py  openai_client.py
mini_agent/tools/: __init__.py  baidu_search_tool.py  bash_tool.py  file_tools.py
mini_agent/tools/search/: __init__.py  academic_search_tool.py  baidu_search_tool.py  base_search_tool.py  ecommerce_search_tool.py  general_search_tool.py  news_search_tool.py  social_search_tool.py  tech_search_tool.py
tests/: test_cli_search.py  test_minimax_api.py  test_search.py  test_tools.py  test_web_search.py
